# ScaleComm

./: CMakeLists.txt  README.md  mpi.cpp  server.cpp
lib/: CMakeLists.txt  client.cpp  kommclient.hpp
